[gd_scene load_steps=18 format=3 uid="uid://dqnaqj8yb6hwd"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ofpvf"]
[ext_resource type="Texture2D" uid="uid://ns3yo3xcmqji" path="res://assets/sprites/mine_bot_idle_sheet_4.png" id="2_w6y4y"]
[ext_resource type="Script" path="res://scripts/powerup_manager.gd" id="3_uodo8"]
[ext_resource type="Script" path="res://scripts/powerups/powerup_hud.gd" id="4_062mm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hq1gh"]
atlas = ExtResource("2_w6y4y")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7scv"]
atlas = ExtResource("2_w6y4y")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjdac"]
atlas = ExtResource("2_w6y4y")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc7si"]
atlas = ExtResource("2_w6y4y")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l78s3"]
atlas = ExtResource("2_w6y4y")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7va4"]
atlas = ExtResource("2_w6y4y")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnxnt"]
atlas = ExtResource("2_w6y4y")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w33f"]
atlas = ExtResource("2_w6y4y")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scdkv"]
atlas = ExtResource("2_w6y4y")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_553wf"]
atlas = ExtResource("2_w6y4y")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmb4a"]
atlas = ExtResource("2_w6y4y")
region = Rect2(32, 32, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ci82u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq1gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7scv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjdac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc7si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l78s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7va4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnxnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w33f")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scdkv")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_553wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmb4a")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o7ta8"]
radius = 6.0
height = 20.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_ofpvf")
metadata/_edit_horizontal_guides_ = [-19.0, 0.0]
metadata/_edit_vertical_guides_ = [-7.0, 6.0]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_ci82u")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.634944

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_o7ta8")

[node name="Timers" type="Node" parent="."]

[node name="DashCooldown" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="DashEffectTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="PowerUpManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_uodo8")

[node name="RayCastToObstacle" type="RayCast2D" parent="."]
position = Vector2(3, -10)
target_position = Vector2(500, 0)

[node name="PowerUpHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -34.0
offset_right = 4.0
offset_bottom = -28.0
script = ExtResource("4_062mm")

[node name="PowerupIcon" type="TextureRect" parent="PowerUpHUD"]
layout_mode = 0
offset_left = -1.0
offset_top = -11.0
offset_right = 9.0
offset_bottom = -1.0
expand_mode = 3
stretch_mode = 3

[connection signal="timeout" from="Timers/DashCooldown" to="." method="dash_cooldown_timeout"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="coyote_timeout"]
[connection signal="timeout" from="Timers/JumpBufferTimer" to="." method="jump_buffer_timeout"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="dash_timeout"]
[connection signal="timeout" from="Timers/DashEffectTimer" to="." method="_on_dash_effect_timer_timeou"]
